--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
         <div style="background-color: #f9f9f9; border-left: 4px solid #4CAF50; padding: 15px; margin: 15px 0;">
           <h3 style="margin-top: 0;">How it works:</h3>
           <ul style="padding-left: 20px;">
-            <li>A text string will appear on your screen</li>
-            <li>Type the text as quickly and accurately as possible</li>
-            <li>Each trial ends when you complete the text or after 15 seconds</li>
-            <li>You'll hear clicking sounds as you type - listen carefully to these</li>
-            <li><strong>If you make a mistake—don't worry! Just keep going</strong></li>
-            <li>Remember: Text is case sensitive and spaces between words are required</li>
+            <li>A text string will appear on your screen.</li>
+            <li>Type the text as quickly and accurately as possible.</li>
+            <li>Each trial ends when you complete the text or after 15 seconds.</li>
+            <li>You'll hear sounds as you type - listen carefully to these.</li>
+            <li><strong>If you make a mistake—don't worry! Just keep going.</strong></li>
+            <li>Text is case sensitive and spaces between words are required.</li>
           </ul>
         </div>
         
@@ -249,8 +249,8 @@
           <h3 style="margin-top: 0;">After each typing task:</h3>
           <p>You'll rate the degree to which the tones corresponded to your key presses on a scale of 1-7:</p>
           <ul style="padding-left: 20px;">
-            <li><strong>7 (Full correspondence):</strong> Tones play in perfect sync with each key press</li>
-            <li><strong>1 (No correspondence):</strong> Tones feel completely independent of your key presses</li>
+            <li><strong>1 (No correspondence):</strong> Tones feel completely independent of your key presses.</li>
+            <li><strong>7 (Full correspondence):</strong> Tones play in perfect sync with each key press.</li>
           </ul>
         </div>
         
@@ -261,6 +261,7 @@
   };
   
   timeline.push(instructions);
+
 
   // Generate trials with balanced conditions
   for (let i = 0; i < repetitionsPerCondition; i++) {
@@ -345,7 +346,7 @@
           <div style="font-size: 24px; margin: 30px 0; padding: 20px; background-color: #f0f0f0; border-radius: 10px; text-align: center;">
             Your Final Score: <span style="font-weight: bold; color: #4CAF50;">${totalScore}</span> out of ${numTrials}
           </div>
-          <p>Thank you for participating in this study! The experiment you just completed is a part of a research project exploring how individuals perceive their sense of control when they are performing actions they are familiar and unfamiliar with. In this case, this was done through the game where you typed words and nonwords. Your rating of how much control you felt over the tones and your hands will be helpful for us to understand sense of control in relation to skill.</p>
+          <p>Thank you for participating in this study! The experiment you just completed is a part of a research project exploring how individuals perceive their sense of control when they are performing actions they are familiar and unfamiliar with. In this case, this was done through the game where you typed words and nonwords. Your rating of how much control you felt over the tones will be helpful for us to understand sense of control in relation to skill.</p>
           <p>We appreciate your time and contribution to our research. Thank you again!</p>
         </div>
       `;
