--- a/index.html
+++ b/index.html
@@ -506,6 +506,23 @@
   };
   
   timeline.push(thankYou);
+  
+  // capture info from Prolific
+  var subject_id = jsPsych.data.getURLVariable('PROLIFIC_PID');
+  var study_id = jsPsych.data.getURLVariable('STUDY_ID');
+  var session_id = jsPsych.data.getURLVariable('SESSION_ID');
+
+  jsPsych.data.addProperties({
+    subject_id: subject_id,
+    study_id: study_id,
+    session_id: session_id
+  });
+
+  var jsPsych = initJsPsych({
+  on_finish: function(){
+    window.location = "https://app.prolific.co/submissions/complete?cc=XXXXXXX"
+  }
+});
 
   // Run the experiment
   jsPsych.run(timeline);
