--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
   var jsPsych = initJsPsych({
   on_finish: function(){
-    window.location = "https://app.prolific.co/submissions/complete?cc=C1DAM75B"
+    window.location.href = "https://app.prolific.co/submissions/complete?cc=C1DAM75B"
   }
 });
 
