--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     }
   });
 
-  const subject_id = jsPsych.randomization.randomID(10);
-  const filename = `${subject_id}.csv`;
+  const subject = jsPsych.randomization.randomID(10);
+  const filename = `${subject}.csv`;
             
   // Lists for sentence generation
   const subjects = [
